# phonon-vlc-mplayer

./: ProjectHome.md
branches/phonon-mplayer/: CMakeLists.txt
branches/phonon-vlc/: CMakeLists.txt  CPackConfig.txt
branches/phonon-vlc/phonon/: CMakeLists.txt
branches/phonon-vlc/quarkplayer/: PluginInterface.h
branches/phonon-vlc/tests/mediaplayer/: README
branches/phonon-vlc/vlc/: AudioOutput.cpp  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  MediaController.cpp  MediaController.h  MediaObject.cpp  SeekStack.h  VLCMediaController.cpp  VLCMediaController.h  VLCMediaObject.cpp  VLCMediaObject.h  VLCVideoWidget.cpp  VideoWidget.h  vlc_loader.h  vlc_symbols.cpp
branches/phonon-vlc/vlc-mplayer/: AudioOutput.h  Backend.cpp  Backend.h  CMakeLists.txt  ConfigureChecks.cmake  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  MediaController.cpp  MediaController.h  MediaObject.h  SeekStack.cpp  SinkNode.cpp  SinkNode.h  VLCMediaController.cpp  VLCMediaObject.h  VLCVideoWidget.h  VideoWidget.cpp  VideoWidget.h  WidgetNoPaintEvent.cpp  WidgetNoPaintEvent.h  vlc_loader.cpp  vlc_symbols.h
branches/phonon-vlc/vlc-mplayer/vlc/: VLCMediaController.cpp  VLCMediaController.h  VLCMediaObject.cpp  VLCMediaObject.h  vlc_loader.cpp  vlc_symbols.h
branches/vlc-mplayer/mplayer/: CMakeLists.txt
buildbot/: master.cfg  upload_package.py
competition/: QuarkPlayerSketch-2.ui  QuarkPlayerSketch-3.ui  QuarkPlayerSketch.ui  README
experimental/phonon-vlc/: libloader.cpp  videowidget.cpp  vlc_symbols.cpp  vlc_symbols.h  vlcevents.cpp  vlcevents.h  vlcloader.cpp  vlcloader.h  vlcmediaobject.cpp  vlcmediaobject.h
wiki/: Building.wiki  CodeConventions.wiki  DesignOverview.wiki  FAQ.wiki  Rationales.wiki  TODO.wiki  phonon.pro  setenv-qt-4.4.0-msvc80.bat  setenv-qt-4.4.3-mingw.bat  setenv-qt-4.4.3-msvc80.bat  setenv-qt-4.5.0-msvc80.bat  setenv-qt-4.5.0.bat  setenv.bat
